--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- Pense à retélécharger la nouvelle version de ton code à chaque fois (29/09/2025) -->
+  <!-- version code (30/09/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Document </title>
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1> Rowy Belson </h1>
-  <h2> Les Tp : </h2>
+  <h2> Tp : </h2>
     <ul>
   <!-- <li><a href=" "> Tp2 </a></li> -->
   <!-- <li><a href=""> Tp4 </a></li> -->
@@ -18,16 +18,19 @@
   <li><a href="autreTp6/autreTp6.html"> Tp6 (22 septembre)  </a></li>
   <li><a href="Tp7/Sommaire.html"> Tp7 </a></li>
   <li><a href="Tp8/document.html"> Tp8 </a></li> 
-  <!-- <li><a href=""> Tp </a></li> -->
-  <!-- <li><a href=""> Tp </a></li> -->
+  <!-- <li><a href=""> Tp9 </a></li> -->
+  <!-- <li><a href=""> Tp10 </a></li> -->
+  <!-- <li><a href=""> Tp11 </a></li> -->
+  <!-- <li><a href=""> Tp12 </a></li> -->
+  <!-- <li><a href=""> Tp13 </a></li> -->
 </ul>
   <h2> Les missions : </h2>
   <ul> 
     <li><a href="atelier pro mission 2/index.html"> Mission 2 </a></li>
     <li><a href="atelier pro mission 3/sommaire.html"> Mission 3 </a></li>
+    <li><a href="atelier pro mission 4/mission4.html"> Mission 4 </a></li> 
     <!-- <li><a href=" "> Mission 5 </a></li> -->
     <!-- <li><a href=" "> Mission 6 </a></li> -->
-    <!-- <li><a href=" "> Mission 7 </a></li> -->
 
   </ul>
 </body>
