--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- version code (30/09/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Document </title>
+    <title> Portfolio </title>
     <link rel="stylesheet" href="indexStyle.css">
 </head>
 <body>
