--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (30/09/2025) -->
+  <!-- version code (3/10/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -18,7 +18,7 @@
   <li><a href="autreTp6/autreTp6.html"> Tp6 (22 septembre)  </a></li>
   <li><a href="Tp7/Sommaire.html"> Tp7 </a></li>
   <li><a href="Tp8/document.html"> Tp8 </a></li> 
-  <!-- <li><a href=""> Tp9 </a></li> -->
+  <li><a href="Tp9/Calcul.html"> Tp9 </a></li> 
   <!-- <li><a href=""> Tp10 </a></li> -->
   <!-- <li><a href=""> Tp11 </a></li> -->
   <!-- <li><a href=""> Tp12 </a></li> -->
