--- a/Tp9/Calcul.html
+++ b/Tp9/Calcul.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Calcul </title>
     <link rel="stylesheet" href="Calcul.css">
     <script src="Calcul.js"></script>
 </head>
 <body>
     <label> Nombre 1 : </label>
-    <input type="text" name="t1" id="t1" placeholder="Saisir nombre">
+    <input type="number" name="t1" id="t1" placeholder="Saisir nombre">
     <label> Nombre 2 : </label>
-    <input type="text" name="t2" id="t2" placeholder="Saisir nombre">
+    <input type="number" name="t2" id="t2" placeholder="Saisir nombre">
     <button onclick="somme()"> Somme </button>
     <input type="text" name="resultat" id="resultat">
     <br>
