--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <li><a href="Tp7/Sommaire.html"> Tp7 </a></li>
   <li><a href="Tp8/document.html"> Tp8 </a></li> 
   <li><a href="Tp9/Calcul.html"> Tp9 </a></li> 
-  <!-- <li><a href=""> Tp10 </a></li> -->
+  <li><a href="Tp10/calcul.html"> Tp10 </a></li> 
   <!-- <li><a href=""> Tp11 </a></li> -->
   <!-- <li><a href=""> Tp12 </a></li> -->
   <!-- <li><a href=""> Tp13 </a></li> -->
