--- a/atelier pro mission 3/sommaire.html
+++ b/atelier pro mission 3/sommaire.html
@@ -11,5 +11,6 @@
     <h1> Bienvenue dans le sommaire </h1>
     <li><a href="formulaire.html"> Le formulaire </a></li>
     <li><a href="pageperso.html"> Ma page perso </a></li>
+    <li> <a href="../index.html"> Retour à l'ndex </a> </li>
 </body>
 </html>
