--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (6/10/2025) -->
+  <!-- version code (7/10/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -11,7 +11,7 @@
 <body>
   <h1> Rowy Belson </h1>
   <h2> Tp : </h2>
-    <ul>
+  <ul>
   <!-- <li><a href=" "> Tp2 </a></li> -->
   <!-- <li><a href=""> Tp4 </a></li> -->
   <li><a href="Tp6/tp6.html"> Tp6 (19 septembre) </a></li>
@@ -23,13 +23,13 @@
   <!-- <li><a href=""> Tp11 </a></li> -->
   <!-- <li><a href=""> Tp12 </a></li> -->
   <!-- <li><a href=""> Tp13 </a></li> -->
-</ul>
+  </ul>
   <h2> Les missions : </h2>
   <ul> 
     <li><a href="atelier pro mission 2/index.html"> Mission 2 </a></li>
     <li><a href="atelier pro mission 3/sommaire.html"> Mission 3 </a></li>
     <li><a href="atelier pro mission 4/mission4.html"> Mission 4 </a></li> 
-    <!-- <li><a href=" "> Mission 5 </a></li> -->
+    <li><a href="atelier pro mission 5/cv.html"> Mission 5 </a></li> 
     <!-- <li><a href=" "> Mission 6 </a></li> -->
 
   </ul>
