--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (7/10/2025) -->
+  <!-- version code (10/10/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -20,7 +21,7 @@
   <li><a href="Tp8/document.html"> Tp8 </a></li> 
   <li><a href="Tp9/Calcul.html"> Tp9 </a></li> 
   <li><a href="Tp10/calcul.html"> Tp10 </a></li> 
-  <!-- <li><a href=""> Tp11 </a></li> -->
+  <li><a href="Tp11/Exojava.html"> Tp11 </a></li>
   <!-- <li><a href=""> Tp12 </a></li> -->
   <!-- <li><a href=""> Tp13 </a></li> -->
   </ul>
