--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (10/10/2025) -->
+  <!-- version code (13/10/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -13,7 +12,7 @@
   <h1> Rowy Belson </h1>
   <h2> Tp : </h2>
   <ul>
-  <!-- <li><a href=" "> Tp2 </a></li> -->
+  <!-- O<li><a href=" "> Tp2 </a></li> -->
   <!-- <li><a href=""> Tp4 </a></li> -->
   <li><a href="Tp6/tp6.html"> Tp6 (19 septembre) </a></li>
   <li><a href="autreTp6/autreTp6.html"> Tp6 (22 septembre)  </a></li>
@@ -22,7 +21,7 @@
   <li><a href="Tp9/Calcul.html"> Tp9 </a></li> 
   <li><a href="Tp10/calcul.html"> Tp10 </a></li> 
   <li><a href="Tp11/Exojava.html"> Tp11 </a></li>
-  <!-- <li><a href=""> Tp12 </a></li> -->
+  <li><a href="Tp12/exo.html"> Tp12 </a></li> 
   <!-- <li><a href=""> Tp13 </a></li> -->
   </ul>
   <h2> Les missions : </h2>
