--- a/Tp11/Exojava.html
+++ b/Tp11/Exojava.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Document </title>
+    <title> Tp11 </title>
     <link rel="stylesheet" href="Exojava.css">
     <script src="Exojava.js"></script>
 </head>
@@ -15,7 +15,6 @@
         <button onclick="aff_Nomprenom()"> Affichage nom et prénom  </button>
         <button onclick="couleur()"> Changer couleur </button>
     </center>
-
     <footer>
         <a href="../index.html"> Retour index </a>
     </footer>
