--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (13/10/2025) -->
+  <!-- version code (14/10/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -13,7 +13,7 @@
   <h2> Tp : </h2>
   <ul>
   <!-- O<li><a href=" "> Tp2 </a></li> -->
-  <!-- <li><a href=""> Tp4 </a></li> -->
+  <li><a href="Tp4/index.html"> Tp4 </a></li>
   <li><a href="Tp6/tp6.html"> Tp6 (19 septembre) </a></li>
   <li><a href="autreTp6/autreTp6.html"> Tp6 (22 septembre)  </a></li>
   <li><a href="Tp7/Sommaire.html"> Tp7 </a></li>
@@ -23,6 +23,9 @@
   <li><a href="Tp11/Exojava.html"> Tp11 </a></li>
   <li><a href="Tp12/exo.html"> Tp12 </a></li> 
   <!-- <li><a href=""> Tp13 </a></li> -->
+  <!-- <li><a href=""> Tp14 </a></li> -->
+  <!-- <li><a href=""> Tp15 </a></li> -->
+  <!-- <li><a href=""> Tp16 </a></li> -->
   </ul>
   <h2> Les missions : </h2>
   <ul> 
@@ -30,7 +33,10 @@
     <li><a href="atelier pro mission 3/sommaire.html"> Mission 3 </a></li>
     <li><a href="atelier pro mission 4/mission4.html"> Mission 4 </a></li> 
     <li><a href="atelier pro mission 5/cv.html"> Mission 5 </a></li> 
-    <!-- <li><a href=" "> Mission 6 </a></li> -->
+    <li><a href="atelier pro mission 6/mission6.html"> Mission 6 </a></li>
+    <!-- <li><a href=""> Mission 7 </a></li> -->
+    <!-- <li><a href=""> Mission 8 </a></li> -->
+    <!-- <li><a href=""> Mission 9 </a></li> -->
 
   </ul>
 </body>
