--- a/atelierProMission6/mission6.html
+++ b/atelierProMission6/mission6.html
@@ -49,7 +49,11 @@
             <li><a href="#">  </a></li>
             <li><a href="#">  </a></li>-->
         </ul>
-        <li class="menu-certif"><a href="#"> Certification </a>
+    <li class="menu-certif"><a href="#"> Certification </a>
+    <ul class="submenu">
+        </ul>
+    </li>
+    <li class="menu-index"><a href="../index.html"> Retour index </a>
     <ul class="submenu">
         </ul>
     </li>
