--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (4/11/2025) -->
+  <!-- version code (7/11/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -23,15 +23,9 @@
   <li><a href="Tp11/Exojava.html"> Tp11 </a></li>
   <li><a href="Tp12/exo.html"> Tp12 </a></li> 
   <li><a href="Tp13/facture.html"> Tp13 </a></li>
-  <!-- <li><a href=""> Tp14 </a></li> -->
+  <li><a href="Tp14/bouton.html"> Tp14 </a></li> 
   <!-- <li><a href=""> Tp15 </a></li> -->
   <!-- <li><a href=""> Tp16 </a></li> -->
-  <!-- <li><a href=""> Tp17 </a></li> -->
-  <!-- <li><a href=""> Tp18 </a></li> -->
-  <!-- <li><a href=""> Tp19 </a></li> -->
-  <!-- <li><a href=""> Tp20 </a></li> -->
-  <!-- <li><a href=""> Tp21 </a></li> -->
-  <!-- <li><a href=""> Tp22 </a></li> -->
   </ul>
   <h2> Les missions : </h2>
   <ul> 
@@ -40,15 +34,11 @@
     <li><a href="atelier pro mission 4/mission4.html"> Mission 4 </a></li> 
     <li><a href="atelier pro mission 5/cv.html"> Mission 5 </a></li> 
     <li><a href="atelier pro mission 6/mission6.html"> Mission 6 </a></li>
-    <li><a href="atelier pro mission 7/certif.html"> Mission 7 </a></li>
+    <!-- <li><a href=""> Mission 7 </a></li> -->
     <!-- <li><a href=""> Mission 8 </a></li> -->
     <!-- <li><a href=""> Mission 9 </a></li> -->
-    <!-- <li><a href=""> Mission 10 </a></li> -->
-    <!-- <li><a href=""> Mission 11 </a></li> -->
-    <!-- <li><a href=""> Mission 12 </a></li> -->
-    <!-- <li><a href=""> Mission 13 </a></li> -->
-    <!-- <li><a href=""> Mission 14 </a></li> -->
-    <!-- <li><a href=""> Mission 15 </a></li> -->
+
   </ul>
 </body>
 </html>
+
