--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (7/11/2025) -->
+  <!-- version code (14/11/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -12,7 +12,7 @@
   <h1> Rowy Belson </h1>
   <h2> Tp : </h2>
   <ul>
-  <!-- O<li><a href=" "> Tp2 </a></li> -->
+  <!-- <li><a href=" "> Tp2 </a></li> -->
   <li><a href="Tp4/index.html"> Tp4 </a></li>
   <li><a href="Tp6/tp6.html"> Tp6 (19 septembre) </a></li>
   <li><a href="autreTp6/autreTp6.html"> Tp6 (22 septembre)  </a></li>
@@ -41,4 +41,3 @@
   </ul>
 </body>
 </html>
-
