--- a/Tp14/bouton.html
+++ b/Tp14/bouton.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,8 @@
     <button onclick="connect()"> Se connecter  </button>
     <button onclick="cdc()"> Chaine de caractère  </button>
     <button onclick="connect2()"> Se connecter 2  </button>
+    <button onclick="connect3()"> Se connecter 3  </button>
+    <button onclick="tab()"> Tableau dynamique  </button>
 
     <footer>
         <a href="../index.html"> Retour index </a>
