--- a/Tp14/tab.html
+++ b/Tp14/tab.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,4 +57,5 @@
         <a href="bouton.html"> Retour </a>
     </footer>
 </body>
+
 </html>
