--- a/Tp7/Sommaire.html
+++ b/Tp7/Sommaire.html
@@ -8,5 +8,7 @@
 <body>
     <li><a href="exo1.html"> Exo 1 :  </a></li>
     <li><a href="exo2.html"> Exo 2 : </a></li>
+
+    <a href="../index.html"> Retour sommaire </a>
 </body>
 </html>
