--- a/Tp13/facture.html
+++ b/Tp13/facture.html
@@ -44,5 +44,7 @@
     <td><input type="text" name="resultat4" id="resultat4"></td>
   </tr>
 </table>
+
+<a href="../index.html"> Retour sommaire </a>
 </body>
 </html>
