--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (17/11/2025) -->
+  <!-- version code (24/11/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -24,9 +24,15 @@
   <li><a href="Tp12/exo.html"> Tp12 </a></li> 
   <li><a href="Tp13/facture.html"> Tp13 </a></li>
   <li><a href="Tp14/bouton.html"> Tp14 </a></li> 
-  <li><a href="Tp15/Sql.html"> Tp15 </a></li>
+  
   <!-- <li><a href=""> Tp16 </a></li> -->
   </ul>
+  <h2> Base de donnée </h2>
+  <ul>
+    <li><a href="Tp15/Sql.html"> Tp base de donnée </a></li>
+    <li><a href="TpBD/Bd.html"> Tp base de donnée n°2 </a></li>
+  </ul>
+
   <h2> Les missions : </h2>
   <ul> 
     <li><a href="atelier pro mission 2/index.html"> Mission 2 </a></li>
