--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <li><a href="Tp12/exo.html"> Tp12 </a></li> 
   <li><a href="Tp13/facture.html"> Tp13 </a></li>
   <li><a href="Tp14/bouton.html"> Tp14 </a></li> 
-  
-  <!-- <li><a href=""> Tp16 </a></li> -->
+  <li><a href="CertifMooc/Certif.html"> Certif MOOC </a></li>
   </ul>
   <h2> Base de donnée </h2>
   <ul>
@@ -40,10 +39,11 @@
     <li><a href="atelier pro mission 4/mission4.html"> Mission 4 </a></li> 
     <li><a href="atelier pro mission 5/cv.html"> Mission 5 </a></li> 
     <li><a href="atelier pro mission 6/mission6.html"> Mission 6 </a></li>
-    <!-- <li><a href=""> Mission 7 </a></li> -->
+    <li><a href="atelier pro mission 7/certif.html"> Mission 7 </a></li>
     <!-- <li><a href=""> Mission 8 </a></li> -->
     <!-- <li><a href=""> Mission 9 </a></li> -->
 
   </ul>
 </body>
 </html>
+
