--- a/TpBD/Bd.html
+++ b/TpBD/Bd.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="bd.css">
 </head>
 <body>
-    
+    <iframe src="solutions_requetes_sql.pdf" width="100%" height="900px" frameborder="0"></iframe>
+
+    <br>
+
+    <a href="../index.html"> Retour sommaire </a>
 </body>
 </html>
