--- a/index.html
+++ b/index.html
@@ -9,41 +9,56 @@
     <link rel="stylesheet" href="indexStyle.css">
 </head>
 <body>
-  <h1> Rowy Belson </h1>
-  <h2> Tp : </h2>
-  <ul>
-  <!-- <li><a href=" "> Tp2 </a></li> -->
-  <li><a href="Tp4/index.html"> Tp4 </a></li>
-  <li><a href="Tp6/tp6.html"> Tp6 (19 septembre) </a></li>
-  <li><a href="autreTp6/autreTp6.html"> Tp6 (22 septembre)  </a></li>
-  <li><a href="Tp7/Sommaire.html"> Tp7 </a></li>
-  <li><a href="Tp8/document.html"> Tp8 </a></li> 
-  <li><a href="Tp9/Calcul.html"> Tp9 </a></li> 
-  <li><a href="Tp10/calcul.html"> Tp10 </a></li> 
-  <li><a href="Tp11/Exojava.html"> Tp11 </a></li>
-  <li><a href="Tp12/exo.html"> Tp12 </a></li> 
-  <li><a href="Tp13/facture.html"> Tp13 </a></li>
-  <li><a href="Tp14/bouton.html"> Tp14 </a></li> 
-  <li><a href="CertifMooc/Certif.html"> Certif MOOC </a></li>
-  </ul>
-  <h2> Base de donnée </h2>
-  <ul>
-    <li><a href="Tp15/Sql.html"> Tp base de donnée </a></li>
-    <li><a href="TpBD/Bd.html"> Tp base de donnée n°2 </a></li>
-  </ul>
+  <h1>Rowy Belson</h1>
 
-  <h2> Les missions : </h2>
-  <ul> 
-    <li><a href="atelier pro mission 2/index.html"> Mission 2 </a></li>
-    <li><a href="atelier pro mission 3/sommaire.html"> Mission 3 </a></li>
-    <li><a href="atelier pro mission 4/mission4.html"> Mission 4 </a></li> 
-    <li><a href="atelier pro mission 5/cv.html"> Mission 5 </a></li> 
-    <li><a href="atelier pro mission 6/mission6.html"> Mission 6 </a></li>
-    <li><a href="atelier pro mission 7/certif.html"> Mission 7 </a></li>
-    <!-- <li><a href=""> Mission 8 </a></li> -->
-    <!-- <li><a href=""> Mission 9 </a></li> -->
+<nav>
+<ul>
 
+<li>
+<a href="#">TP</a>
+<ul>
+<li><a href="Tp4/index.html">Tp4</a></li>
+<li><a href="Tp6/tp6.html">Tp6 (19 septembre)</a></li>
+<li><a href="autreTp6/autreTp6.html">Tp6 (22 septembre)</a></li>
+<li><a href="Tp7/Sommaire.html">Tp7</a></li>
+<li><a href="Tp8/document.html">Tp8</a></li>
+<li><a href="Tp9/Calcul.html">Tp9</a></li>
+<li><a href="Tp10/calcul.html">Tp10</a></li>
+<li><a href="Tp11/Exojava.html">Tp11</a></li>
+<li><a href="Tp12/exo.html">Tp12</a></li>
+<li><a href="Tp13/facture.html">Tp13</a></li>
+<li><a href="Tp14/bouton.html">Tp14</a></li>
+</ul>
+</li>
+
+<li>
+<a href="#"> Base de données :</a>
+<ul>
+<li><a href="Tp15/Sql.html">Tp base de donnée</a></li>
+<li><a href="TpBD/Bd.html">Tp base de donnée n°2</a></li>
+</ul>
+</li>
+
+<li>
+<a href="#"> Missions :</a>
+<ul>
+<li><a href="atelier pro mission 2/index.html">Mission 2</a></li>
+<li><a href="atelier pro mission 3/sommaire.html">Mission 3</a></li>
+<li><a href="atelier pro mission 4/mission4.html">Mission 4</a></li>
+<li><a href="atelier pro mission 5/cv.html">Mission 5</a></li>
+<li><a href="atelier pro mission 6/mission6.html">Mission 6</a></li>
+</ul>
+</li>
+
+<li>
+  <a href="#"> Certifs :</a>
+  <ul>
+    <li><a href="atelier pro mission 7/certif.html">Mission 7 (Secnum)</a></li>
+    <li><a href="CertifMooc/Certif.html">Certif MOOC</a></li>
   </ul>
+</li>
+
+</ul>
+</nav>
 </body>
 </html>
-
