--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (24/11/2025) -->
+  <!-- version code (25/11/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -32,7 +32,7 @@
 </li>
 
 <li>
-<a href="#"> Base de données :</a>
+<a href="#">Base de données :</a>
 <ul>
 <li><a href="Tp15/Sql.html">Tp base de donnée</a></li>
 <li><a href="TpBD/Bd.html">Tp base de donnée n°2</a></li>
@@ -40,21 +40,23 @@
 </li>
 
 <li>
-<a href="#"> Missions :</a>
+<a href="#">Missions :</a>
 <ul>
 <li><a href="atelier pro mission 2/index.html">Mission 2</a></li>
 <li><a href="atelier pro mission 3/sommaire.html">Mission 3</a></li>
 <li><a href="atelier pro mission 4/mission4.html">Mission 4</a></li>
 <li><a href="atelier pro mission 5/cv.html">Mission 5</a></li>
 <li><a href="atelier pro mission 6/mission6.html">Mission 6</a></li>
+<li><a href="atelier pro mission 9/Quizz.html">Mission 9</a></li>
 </ul>
 </li>
 
 <li>
-  <a href="#"> Certifs :</a>
+  <a href="#">Certifications :</a>
   <ul>
     <li><a href="atelier pro mission 7/certif.html">Mission 7 (Secnum)</a></li>
-    <li><a href="CertifMooc/Certif.html">Certif MOOC</a></li>
+    <li><a href="CertifMooc/Certif.html">Certification MOOC</a></li>
+    <li><a href="atelier pro mission 8/certif.html">Mission 8 (certification MOOC dernier module)</a></li>
   </ul>
 </li>
 
