--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <!-- Rowy Belson -->
-  <!-- version code (25/11/2025) -->
+  <!-- version code (2/12/2025) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
@@ -34,7 +34,7 @@
 <li>
 <a href="#">Base de données :</a>
 <ul>
-<li><a href="Tp15/Sql.html">Tp base de donnée</a></li>
+<li><a href="Tp15/Sql.html">Tp 15 : base de donnée</a></li>
 <li><a href="TpBD/Bd.html">Tp base de donnée n°2</a></li>
 </ul>
 </li>
