--- a/atelier pro mission 9/Quizz.html
+++ b/atelier pro mission 9/Quizz.html
@@ -1,122 +1,75 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <!-- Rowy Belson -->
+    <!--Rowy Belson-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quizz</title>
     <link rel="stylesheet" href="quizz.css">
     <script src="quizz.js"></script>
 </head>
+
 <body>
-    <h1>Quizz :</h1>
+    <h1>Quizz (à choix multiples sur certaines questions)</h1>
+
     <form>
-        <table>
-          <h2>Question 1 :</h2>
-    <h3> (3pt)</h3>
-    <ul>
-        <input type="checkbox" id="a1">
-        <br>
-        <input type="checkbox" id="a2">
-        <br>
-        <input type="checkbox" id="a3">
-    </ul> 
-    
-    <h2>Question 2 :</h2>
-    <h3> (1pt)</h3>
-    <ul>
-        <input type="checkbox" id="b1">
-        <br>
-        <input type="checkbox" id="b2">
-        <br>
-        <input type="checkbox" id="b3">
-    </ul>
 
-    <h2>Question 3 :</h2>
-    <h3> (2pt)</h3>
-    <ul>
-        <input type="checkbox" id="c1">
-        <br>
-        <input type="checkbox" id="c2">
-        <br>
-        <input type="checkbox" id="c3">
-    </ul>
+        <h2>Question 1 : Comment les gens s'informent t-ils de nos jours ? (3 pts)</h2>
+        <label><input type="checkbox" id="a1">Réseaux sociaux</label><br>
+        <label><input type="checkbox" id="a2">Télé</label><br>
+        <label><input type="checkbox" id="a3">Journaux</label><br>
 
-    <h2>Question 4 :</h2>
-    <h3> (4pt)</h3>
-    <ul>
-        <input type="checkbox" id="d1">
-        <br>
-        <input type="checkbox" id="d2">
-        <br>
-        <input type="checkbox" id="d3">
-    </ul>
+        <h2>Question 2 : Tu penses que tu devrais faire du sport quand ? (1 pt)</h2>
+        <label><input type="checkbox" id="b1">"J'ai pas le temps ni les moyens d'en faire"</label><br>
+        <label><input type="checkbox" id="b2">7j/7</label><br>
+        <label><input type="checkbox" id="b3">Le week-end seulement</label><br>
 
-    <h2>Question 5 :</h2>
-    <h3> (3pt)</h3>
-    <ul>
-        <input type="checkbox" id="e1">
-        <br>
-        <input type="checkbox" id="e2">
-        <br>
-        <input type="checkbox" id="e3">
-    </ul>
+        <h2>Question 3 : Entre ces boissons laquelle est le mieux ? (2 pts)</h2>
+        <label><input type="checkbox" id="c1">Coca</label><br>
+        <label><input type="checkbox" id="c2">L'eau</label><br>
+        <label><input type="checkbox" id="c3">7 up mojito</label><br>
 
-    <h2>Question 6 :</h2>
-    <h3> (8pt)</h3>
-    <ul>
-        <input type="checkbox" id="f1">
-        <br>
-        <input type="checkbox" id="f2">
-        <br>
-        <input type="checkbox" id="f3">
-    </ul>
+        <h2>Question 4 : Une pizza de grande taille te suffit pour être remplit ? (4 pts)</h2>
+        <label><input type="checkbox" id="d2">Oui et même c'est beaucoup trop pour moi</label><br>
+        <label><input type="checkbox" id="d3">Non je doit prendre une/des autre(s) part(s) pour pouvoir être remplit</label><br>
 
-    <h2>Question 7 :</h2>
-    <h3> (10pt)</h3>
-    <ul>
-        <input type="checkbox" id="g1">
-        <br>
-        <input type="checkbox" id="g2">
-        <br>
-        <input type="checkbox" id="g3">
-    </ul>
+        <h2>Question 5 : Quand tu sors de chez toi pour aller au lycée, tu as quoi sur toi ? (3 pts)</h2>
+        <label><input type="checkbox" id="e1">Ma carte du lycée</label><br>
+        <label><input type="checkbox" id="e2">Un lance rocket</label><br>
+        <label><input type="checkbox" id="e3">Des chaussures</label><br>
 
-    <h2>Question 8 :</h2>
-    <h3> (6pt)</h3>
-    <ul>
-        <input type="checkbox" id="h1">
-        <br>
-        <input type="checkbox" id="h2">
-        <br>
-        <input type="checkbox" id="h3">
-    </ul>
+        <h2>Question 6 : Quelle est le meilleure plat de pâtes ? (4 pts)</h2>
+        <label><input type="checkbox" id="f1">Pâtes avec du beurre et sauce ketchup</label><br>
+        <label><input type="checkbox" id="f2">Pâtes bolognaise</label><br>
+        <label><input type="checkbox" id="f3">Pâtes carbonara</label><br>
 
-    <h2>Question 9 :</h2>
-    <h3> (5pt)</h3>
-    <ul>
-        <input type="checkbox" id="i1">
-        <br>
-        <input type="checkbox" id="i2">
-        <br>
-        <input type="checkbox" id="i3">
-    </ul>
+        <h2>Question 7 : Qui est le personnage d'animé le plus puissant ? (2 pts)</h2>
+        <label><input type="checkbox" id="g1">Gojo</label><br>
+        <label><input type="checkbox" id="g2">Goku</label><br>
+        <label><input type="checkbox" id="g3">Naruto</label><br>
 
-    <h2>Question 10 :</h2>
-    <h3> (3pt)</h3>
-    <ul>
-        <input type="checkbox" id="j1">
-        <br>
-        <input type="checkbox" id="j2">
-        <br>
-        <input type="checkbox" id="j3">
-    </ul>
-        </table>
+        <h2>Question 8 : Ananas sur une pizza ? (6 pts)</h2>
+        <label><input type="checkbox" id="h1">Oui</label><br>
+        <label><input type="checkbox" id="h2">Non</label><br>
+        <label><input type="checkbox" id="h3">C'est quoi cette question ?</label><br>
+
+        <h2>Question 9 : Quelle est la meilleure couleur ? (4 pts)</h2>
+        <label><input type="checkbox" id="i1">Vert</label><br>
+        <label><input type="checkbox" id="i2">Rouge</label><br>
+        <label><input type="checkbox" id="i3">Kaki</label><br>
+
+        <h2>Question 10 : Quelle est la meilleure transformation dans Dragon Ball en terme de design ? (3 pts)</h2>
+        <label><input type="checkbox" id="j1"> Super Saiyan God </label><br>
+        <label><input type="checkbox" id="j2"> Ultra Instinct</label><br>
+        <label><input type="checkbox" id="j3"> Super Saiyan 4 </label><br>
+
     </form>
 
-    <button onclick="testqcm()"> Correction </button>
-    <button onclick="corrige()"> Corrigé </button>
-    <button onclick="efface()"> Effacer </button>
-    <a href="../index.html"> Retour sommaire </a>
+    <button onclick="testqcm()">Correction</button>
+    <button onclick="corrige()">Corrigé</button>
+    <button onclick="efface()">Effacer</button>
+
+    <br><br>
+    <a href="../index.html">Retour sommaire</a>
+
 </body>
 </html>
