--- a/atelier pro mission 9/Quizz.html
+++ b/atelier pro mission 9/Quizz.html
@@ -14,53 +14,82 @@
     <form>
 
         <h2>Question 1 : Comment les gens s'informent t-ils de nos jours ? (3 pts)</h2>
-        <label><input type="checkbox" id="a1">Réseaux sociaux</label><br>
-        <label><input type="checkbox" id="a2">Télé</label><br>
-        <label><input type="checkbox" id="a3">Journaux</label><br>
+       <label><input type="checkbox" id="a1">Réseaux sociaux</label>
+        <br>
+        <label><input type="checkbox" id="a2">Télé</label>
+        <br>
+        <label><input type="checkbox" id="a3">Journaux</label>
+        <br>
 
         <h2>Question 2 : Tu penses que tu devrais faire du sport quand ? (1 pt)</h2>
-        <label><input type="checkbox" id="b1">"J'ai pas le temps ni les moyens d'en faire"</label><br>
-        <label><input type="checkbox" id="b2">7j/7</label><br>
-        <label><input type="checkbox" id="b3">Le week-end seulement</label><br>
+        <label><input type="checkbox" id="b1">"J'ai pas le temps ni les moyens d'en faire"</label>
+        <br>
+        <label><input type="checkbox" id="b2">7j/7</label>
+        <br>
+        <label><input type="checkbox" id="b3">Le week-end seulement</label>
+        <br>
 
         <h2>Question 3 : Entre ces boissons laquelle est le mieux ? (2 pts)</h2>
-        <label><input type="checkbox" id="c1">Coca</label><br>
-        <label><input type="checkbox" id="c2">L'eau</label><br>
-        <label><input type="checkbox" id="c3">7 up mojito</label><br>
+        <label><input type="checkbox" id="c1">Coca</label>
+        <br>
+        <label><input type="checkbox" id="c2">L'eau</label>
+        <br>
+        <label><input type="checkbox" id="c3">7 up mojito</label>
+        <br>
 
         <h2>Question 4 : Une pizza de grande taille te suffit pour être remplit ? (4 pts)</h2>
-        <label><input type="checkbox" id="d2">Oui et même c'est beaucoup trop pour moi</label><br>
-        <label><input type="checkbox" id="d3">Non je doit prendre une/des autre(s) part(s) pour pouvoir être remplit</label><br>
+        <label><input type="checkbox" id="d2">Oui et même c'est beaucoup trop pour moi</label>
+        <br>
+        <label><input type="checkbox" id="d3">Non je doit prendre une/des autre(s) part(s) pour pouvoir être remplit</label>
+        <br>
 
         <h2>Question 5 : Quand tu sors de chez toi pour aller au lycée, tu as quoi sur toi ? (3 pts)</h2>
-        <label><input type="checkbox" id="e1">Ma carte du lycée</label><br>
-        <label><input type="checkbox" id="e2">Un lance rocket</label><br>
-        <label><input type="checkbox" id="e3">Des chaussures</label><br>
+        <label><input type="checkbox" id="e1">Ma carte du lycée</label>
+        <br>
+        <label><input type="checkbox" id="e2">Un lance rocket</label>
+        <br>
+        <label><input type="checkbox" id="e3">Des chaussures</label>
+        <br>
 
         <h2>Question 6 : Quelle est le meilleure plat de pâtes ? (4 pts)</h2>
-        <label><input type="checkbox" id="f1">Pâtes avec du beurre et sauce ketchup</label><br>
-        <label><input type="checkbox" id="f2">Pâtes bolognaise</label><br>
-        <label><input type="checkbox" id="f3">Pâtes carbonara</label><br>
+        <label><input type="checkbox" id="f1">Pâtes avec du beurre et sauce ketchup</label>
+        <br>
+        <label><input type="checkbox" id="f2">Pâtes bolognaise</label>
+        <br>
+        <label><input type="checkbox" id="f3">Pâtes carbonara</label>
+        <br>
 
         <h2>Question 7 : Qui est le personnage d'animé le plus puissant ? (2 pts)</h2>
-        <label><input type="checkbox" id="g1">Gojo</label><br>
-        <label><input type="checkbox" id="g2">Goku</label><br>
-        <label><input type="checkbox" id="g3">Naruto</label><br>
+        <label><input type="checkbox" id="g1">Gojo</label>
+        <br>
+        <label><input type="checkbox" id="g2">Goku</label>
+        <br>
+        <label><input type="checkbox" id="g3">Naruto</label>
+        <br>
 
         <h2>Question 8 : Ananas sur une pizza ? (6 pts)</h2>
-        <label><input type="checkbox" id="h1">Oui</label><br>
-        <label><input type="checkbox" id="h2">Non</label><br>
-        <label><input type="checkbox" id="h3">C'est quoi cette question ?</label><br>
+        <label><input type="checkbox" id="h1">Oui</label>
+        <br>
+        <label><input type="checkbox" id="h2">Non</label>
+        <br>
+        <label><input type="checkbox" id="h3">C'est quoi cette question ?</label>
+        <br>
 
         <h2>Question 9 : Quelle est la meilleure couleur ? (4 pts)</h2>
-        <label><input type="checkbox" id="i1">Vert</label><br>
-        <label><input type="checkbox" id="i2">Rouge</label><br>
-        <label><input type="checkbox" id="i3">Kaki</label><br>
+        <label><input type="checkbox" id="i1">Vert</label>
+        <br>
+        <label><input type="checkbox" id="i2">Rouge</label>
+        <br>
+        <label><input type="checkbox" id="i3">Kaki</label>
+        <br>
 
         <h2>Question 10 : Quelle est la meilleure transformation dans Dragon Ball en terme de design ? (3 pts)</h2>
-        <label><input type="checkbox" id="j1">Super Saiyan God</label><br>
-        <label><input type="checkbox" id="j2">Ultra Instinct</label><br>
-        <label><input type="checkbox" id="j3">Super Saiyan 4</label><br>
+        <label><input type="checkbox" id="j1">Super Saiyan God</label>
+        <br>
+        <label><input type="checkbox" id="j2">Ultra Instinct</label>
+        <br>
+        <label><input type="checkbox" id="j3">Super Saiyan 4</label>
+        <br>
 
     </form>
 
@@ -73,4 +102,3 @@
 
 </body>
 </html>
-
